2003-11-13  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_delete_revs): It's `&&', not `and'.

2003-11-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Create the empty log to make it easier to tail immediately
	after the script is started.

2003-11-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh (exit_help): Correct help to specify `-H' and not `-h' as
	the help option.

2003-11-13  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_delete_revs): Don't use the WOE32 kludge which refuses to
	delete revisions from bvinary files on Cygwin.  I'm not sure what the
	kludge was trying to avoid, but commenting it out causes the test suite
	to pass.

2003-11-12  Derek Price  <derek@ximbiot.com>

	* main.c (main): Remove a trailing newline from the version string.
	Replace multiple calls to fputs to a single call reformated to C89
	specifications.  Remove some typecasts unecessary under C89.
	* sanity.sh (version): Remove trailing newline from the version string.

2003-11-12  Derek Price  <derek@ximbiot.com>

	* add.c (add): Allocate more space for the string I added characters
	to.
	(Report from Mark D. Baushke <mdb@cvshome.org>.)

2003-11-11  Derek Price  <derek@ximbiot.com>

	* add.c (add), classify.c (Classify_File), client.c (update_entries),
	repos.c (Name_Repository): Use consistent quoting in error messages.
	Misc reformatting.
	* sanity.sh: Update to match.

2003-11-10  Derek Price  <derek@ximbiot.com>

	* commit.c (find_fileproc, check_fileproc):  Refuse to remove files
	when the file exists in the sandbox.  This used to cause data loss.
	(Report from Andreas Reifschneider <andyreif@studcs.uni-sb.de>.)

	* sanity.sh (rmadd3): Update to match.  Expand comments.

2003-11-10  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rmadd3): Test the behavior of commit after the
	add/replace.
	(Report from Andreas Reifschneider <andyreif@studcs.uni-sb.de>.)

2003-11-10  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rmadd3): Fix another typo.
